// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render 1`] = `
<DocumentFragment>
  <div
    class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
  >
    <div
      class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
    >
      <div
        class="sc-bdfBwQ hteSKx"
        height="1.25em"
        width="1.25em"
      >
        <svg>
          alert-warning.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col w-full"
    />
  </div>
</DocumentFragment>
`;

exports[`Alert should render as danger alert 1`] = `
<DocumentFragment>
  <div
    class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-danger-50 dark:bg-theme-secondary-800"
  >
    <div
      class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-danger-400"
    >
      <div
        class="sc-bdfBwQ hteSKx"
        height="1.25em"
        width="1.25em"
      >
        <svg>
          alert-danger.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col w-full"
    />
  </div>
</DocumentFragment>
`;

exports[`Alert should render as hint alert 1`] = `
<DocumentFragment>
  <div
    class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-hint-50 dark:bg-theme-secondary-800"
  >
    <div
      class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-hint-500"
    >
      <div
        class="sc-bdfBwQ hteSKx"
        height="1.25em"
        width="1.25em"
      >
        <svg>
          alert-hint.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col w-full"
    />
  </div>
</DocumentFragment>
`;

exports[`Alert should render as info alert 1`] = `
<DocumentFragment>
  <div
    class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-primary-50 dark:bg-theme-secondary-800"
  >
    <div
      class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-primary-600"
    >
      <div
        class="sc-bdfBwQ hteSKx"
        height="1.25em"
        width="1.25em"
      >
        <svg>
          alert-info.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col w-full"
    />
  </div>
</DocumentFragment>
`;

exports[`Alert should render as success alert 1`] = `
<DocumentFragment>
  <div
    class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-success-50 dark:bg-theme-secondary-800"
  >
    <div
      class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-success-600"
    >
      <div
        class="sc-bdfBwQ hteSKx"
        height="1.25em"
        width="1.25em"
      >
        <svg>
          alert-success.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col w-full"
    />
  </div>
</DocumentFragment>
`;

exports[`Alert should render as warning alert 1`] = `
<DocumentFragment>
  <div
    class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-warning-50 dark:bg-theme-secondary-800"
  >
    <div
      class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-warning-600"
    >
      <div
        class="sc-bdfBwQ hteSKx"
        height="1.25em"
        width="1.25em"
      >
        <svg>
          alert-warning.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col w-full"
    />
  </div>
</DocumentFragment>
`;
